Adds support for cached JXM connections to Cassandra nodes. Adds decommission support for Cassandra pods.